feat: First version of layout implemented, including create poll component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+// Base
+@import './styles/base/base-root';
+@import './styles/base/base-grid';
+
+// Blocks
+@import './styles/blocks/block-header';
+@import './styles/blocks/block-form';
+@import './styles/blocks/block-section';
+
+
