Feat: Added voting functionality

--- a/src/app/voting/components/create-poll/create-poll.component.html
+++ b/src/app/voting/components/create-poll/create-poll.component.html
@@ -84,8 +84,8 @@
         type="button"
         mat-raised-button
         color="primary"
-        aria-label="Add answer"
-        class="form__reset"
+        aria-label="Add answer option"
+        class="form__button"
       >
         Reset form
       </button>
