--- a/src/styles/blocks/_block-form.scss
+++ b/src/styles/blocks/_block-form.scss
@@ -32,6 +32,10 @@ body {
       width: 100%;
       padding: 0 30px;
       background-color: white;
+
+      &.-end {
+        justify-content: flex-end;
+      }
     }
 
     &__question {
@@ -49,6 +53,16 @@ body {
     &__field {
       flex-grow: 1;
       margin: 0 30px 0 0;
+    }
+
+    &__radio-group {
+      display: flex;
+      flex-direction: column;
+      padding: 0 30px;
+    }
+
+    &__radio-button {
+      margin: 0 0 20px;
     }
   }
 }
