--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,9 @@
 // Base
-@import './styles/base/base-root';
-@import './styles/base/base-grid';
+@import "./styles/base/base-root";
+@import "./styles/base/base-grid";
 
 // Blocks
-@import './styles/blocks/block-header';
-@import './styles/blocks/block-form';
-@import './styles/blocks/block-section';
-
-
+@import "./styles/blocks/block-header";
+@import "./styles/blocks/block-form";
+@import "./styles/blocks/block-section";
+@import "./styles/blocks/block-chart";
