--- a/src/app/voting/components/chart/chart.component.html
+++ b/src/app/voting/components/chart/chart.component.html
@@ -1,1 +1,15 @@
 <h2 class="section__title">Results</h2>
+
+<div class="chart">
+  <ng-container *ngIf="chartHasData">
+    <canvas
+      baseChart
+      class="chart__canvas"
+      [data]="barChartData"
+      [options]="barChartOptions"
+      [plugins]="barChartPlugins"
+      [type]="barChartType"
+    >
+    </canvas>
+  </ng-container>
+</div>
