--- a/src/styles/blocks/_block-section.scss
+++ b/src/styles/blocks/_block-section.scss
@@ -1,16 +1,28 @@
-.section {
-  display: flex;
-  background-color: white;
-  border-radius: 5px;
-  box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
-
-  &__content {
+body {
+  .section {
     display: flex;
-    width: 100%;
-    flex-direction: column;
-  }
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
 
-  &__form {
-    flex-grow: 1;
+    &__title {
+      display: flex;
+      align-items: center;
+      margin: 0;
+      font-weight: 400;
+      font-size: 26px;
+      padding: 0 30px;
+      height: 70px;
+    }
+
+    &__content {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+    }
+
+    &__form {
+      flex-grow: 1;
+    }
   }
 }
