feat: Implemented voting results chart. fix: Optimised code in several components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="app-wrap">
-  <ds-header></ds-header>
-
   <div class="container">
+    <div class="section -bg">
+      <ds-header class="section__header"></ds-header>
+    </div>
+  </div>
+
+  <div class="container -grid">
     <div class="section">
       <ds-create-poll class="section__content"></ds-create-poll>
     </div>
