--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,15 @@
+// Fonts
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap");
+
 // Base
 @import "./styles/base/base-root";
 @import "./styles/base/base-grid";
+
+// Elements
+@import "./styles/elements/element-snackbar";
+@import "./styles/elements/element-button";
+@import "./styles/elements/element-radio-button";
 
 // Blocks
 @import "./styles/blocks/block-header";
