--- a/src/styles/base/_base-grid.scss
+++ b/src/styles/base/_base-grid.scss
@@ -1,10 +1,14 @@
 .container {
   display: grid;
-  min-width: 0;
-  width: 100%;
-  grid-auto-columns: minmax(0, 1fr);
-  grid-auto-flow: column;
-  column-gap: 30px;
-  padding: 0 30px 50px;
-  flex-grow: 1;
+  padding: 0 50px 20px;
+
+  &.-grid {
+    min-width: 0;
+    width: 100%;
+    grid-auto-columns: minmax(0, 1fr);
+    grid-auto-flow: column;
+    column-gap: 30px;
+    flex-grow: 1;
+    padding: 0 50px 50px;
+  }
 }
