--- a/src/styles/base/_base-root.scss
+++ b/src/styles/base/_base-root.scss
@@ -2,18 +2,21 @@ html {
   height: 100%;
   box-sizing: border-box;
 }
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 body {
   margin: 0;
   height: 100%;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-  background-color: #f4f4f4;
-  color: #1e1e1e;
+  background-color: #f6f9fc;
+  color: #3c4257;
+  font-family: "Roboto", sans-serif;
 }
 .app-wrap {
   height: 100vh;
+  padding: 20px 0 0;
   display: flex;
   flex-direction: column;
 }
