--- a/src/styles/blocks/_block-form.scss
+++ b/src/styles/blocks/_block-form.scss
@@ -2,33 +2,23 @@ body {
   .form {
     position: relative;
 
-    &__scroll {
-      max-height: calc(100vh - 310px);
-      overflow: auto;
-    }
-
-    &__title {
-      display: flex;
-      align-items: center;
-      margin: 0;
-      font-weight: 400;
-      font-size: 26px;
-      padding: 0 30px;
-      height: 70px;
-    }
-
     &__info {
       display: inline-block;
+      font-size: 16px;
+      color: #425466;
+    }
+
+    &__sub-title {
+      display: block;
+      font-size: 18px;
+      padding: 0 30px;
+      margin: 0 0 30px;
     }
 
     &__footer {
-      position: absolute;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      bottom: 0;
-      left: 0;
-      height: 80px;
       width: 100%;
       padding: 0 30px;
       background-color: white;
@@ -48,6 +38,11 @@ body {
       display: flex;
       align-items: center;
       padding: 0 30px;
+    }
+
+    &__answer-option-button {
+      border-radius: 50%;
+      transform: translateY(-9px);
     }
 
     &__field {
