--- a/src/styles/blocks/_block-header.scss
+++ b/src/styles/blocks/_block-header.scss
@@ -1,4 +1,16 @@
 .header {
-  height: 100px;
+  display: flex;
+  align-items: center;
+  height: 60px;
   padding: 20px 30px;
+  width: 100%;
+
+  &__title {
+    font-family: "Rubik", sans-serif;
+    display: block;
+    font-size: 20px;
+    margin: 0;
+    color: #ffffff;
+    font-weight: 300;
+  }
 }
