--- a/src/styles/blocks/_block-section.scss
+++ b/src/styles/blocks/_block-section.scss
@@ -3,16 +3,52 @@ body {
     display: flex;
     background-color: white;
     border-radius: 5px;
+    overflow: hidden;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
 
-    &__title {
+    &__grid {
+      display: grid;
+      flex-grow: 1;
+      grid-template-rows: 100px 1fr 80px;
+
+      &.-no-footer {
+        grid-template-rows: 100px 1fr;
+      }
+    }
+
+    &.-bg {
+      background-color: #611f69;
+    }
+
+    &__header {
+      width: 100%;
+    }
+
+    &__scroll {
+      max-height: calc(100vh - 340px);
+      overflow: auto;
+    }
+
+    &__head {
       display: flex;
-      align-items: center;
-      margin: 0;
-      font-weight: 400;
-      font-size: 26px;
+      justify-content: center;
+      flex-direction: column;
       padding: 0 30px;
-      height: 70px;
+    }
+
+    &__caption {
+      font-size: 16px;
+      color: #635bff;
+      display: block;
+      margin: 0 0 3px;
+    }
+
+    &__title {
+      font-family: "Rubik", sans-serif;
+      margin: 0;
+      font-weight: 500;
+      font-size: 28px;
+      color: #0a2540;
     }
 
     &__content {
@@ -21,8 +57,18 @@ body {
       flex-direction: column;
     }
 
-    &__form {
-      flex-grow: 1;
+    &__info {
+      display: block;
+      font-size: 16px;
+      padding: 0 30px;
+      color: gray;
+    }
+
+    &__no-data {
+      margin: 0;
+      font-weight: 400;
+      font-size: 16px;
+      padding: 0 30px;
     }
   }
 }
