fix: Optimised reset button disabled status, when there is nothing to reset

--- a/src/app/voting/components/create-poll/create-poll.component.html
+++ b/src/app/voting/components/create-poll/create-poll.component.html
@@ -88,6 +88,7 @@
 
       <button
         (click)="resetForm()"
+        [disabled]="!answerOptionFormArray.controls.length && questionControl.invalid"
         type="button"
         mat-raised-button
         aria-label="Add answer option"
