--- a/src/app/voting/components/poll/poll.component.html
+++ b/src/app/voting/components/poll/poll.component.html
@@ -30,7 +30,7 @@
         </mat-radio-group>
       </div>
 
-      <div class="form__footer -end">
+      <div class="section__footer -end">
         <button
           (click)="vote()"
           [disabled]="(async.answerOptions && async.answerOptions.length < 2) || pollControl.invalid"
