--- a/src/app/voting/components/create-poll/create-poll.component.html
+++ b/src/app/voting/components/create-poll/create-poll.component.html
@@ -80,8 +80,8 @@
       </div>
     </div>
 
-    <div class="form__footer">
-      <span class="form__info"
+    <div class="section__footer">
+      <span class="section__info"
         >{{ answerOptionFormArray.length }}/{{ maxNumberOfAnswers }} possible
         answers</span
       >
