feat: Added responsiveness support for smaller screens

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,13 +6,13 @@
   </div>
 
   <div class="container -grid">
-    <div class="section">
+    <div class="container__section section">
       <ds-create-poll class="section__content"></ds-create-poll>
     </div>
-    <div class="section">
+    <div class="container__section section">
       <ds-poll class="section__content"></ds-poll>
     </div>
-    <div class="section">
+    <div class="container__section section -third">
       <ds-chart class="section__content"></ds-chart>
     </div>
   </div>
