--- a/src/styles/blocks/_block-section.scss
+++ b/src/styles/blocks/_block-section.scss
@@ -6,6 +6,10 @@ body {
     overflow: hidden;
     box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.1);
 
+    @media (max-width: 1280px) {
+      margin: 0 0 20px;
+    }
+
     &__grid {
       display: grid;
       flex-grow: 1;
