fix: Small fix regarding responsive styling

--- a/src/styles/base/_base-grid.scss
+++ b/src/styles/base/_base-grid.scss
@@ -21,9 +21,11 @@
     }
   }
 
-  &__third {
-    @media (max-width: 1280px) {
-      grid-column: 1 / -1;
+  &__section {
+    &.-third {
+      @media (max-width: 1280px) {
+        grid-column: 1 / -1;
+      }
     }
   }
 }
